--- a/css/pages/_createPet.scss
+++ b/css/pages/_createPet.scss
@@ -1,3 +1,14 @@
+.create-pet-form {
+    .josefinsans-normal-chetwode-blue-20px {
+        color: var(--chetwode-blue);
+        font-family: "Josefin Sans";
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+    }
+}
+
+
 .button-p {
     background-color: var(--porsche);
     border-radius: 15px;
