Added JavaScript files

--- a/css/pages/_adoptionRequestsListShelter.scss
+++ b/css/pages/_adoptionRequestsListShelter.scss
@@ -1,6 +1,6 @@
 //Top
 
-.top-adoption{
+.top-adoption {
     background-color: var(--porsche);
     padding-top: 2em;
     padding-bottom: 3em;
@@ -14,8 +14,8 @@
     }
 }
 
-.rectangle-background-adoption{
-    background-color:white;
+.rectangle-background-adoption {
+    background-color: white;
     height: 40px;
     border-radius: 15px;
     position: relative;
@@ -26,7 +26,7 @@
 //Collapsible
 
 .collapsible {
-    background-color:var(--chetwode-blue);
+    background-color: var(--chetwode-blue);
     color: white;
     cursor: pointer;
     width: 80%;
@@ -38,7 +38,7 @@
     margin-top: 1.5em;
     font-family: 'Josefin sans';
 
-    .image-pet{
+    .image-pet {
         border-radius: 15px 0px 0px 15px;
         position: relative;
         left: -0.4em;
@@ -52,12 +52,13 @@
 //     color: white;
 // }
 
-.active, collapsible:hover{
-    background-color:var(--chetwode-white);
+.active,
+collapsible:hover {
+    background-color: var(--chetwode-white);
     color: white;
     border-radius: 15px 15px 0px 0px;
 
-    .arrow-white{
+    .arrow-white {
         transform: rotate(180deg);
     }
 }
@@ -72,6 +73,19 @@
     width: 80%;
     border-radius: 0px 0px 15px 15px;
 
+    .button-secondary {
+        background-color: white;
+        border: 2px solid;
+        border-color: var(--porsche);
+        border-radius: 15px;
+        width: 160px;
+        height: 64px;
+        color: var(--porsche);
+        font-size: 22px;
+        font-weight: 600;
+        font-family: var(--font-family-josefin_sans);
+    }
+
     .josefinsans-chetwode-blue-18px {
         color: var(--chetwode-blue);
         font-family: "Josefin Sans";
@@ -81,7 +95,7 @@
         min-height: 12px;
     }
 
-    .question{
+    .question {
         color: var(--chetwode-blue);
     }
 }
@@ -91,5 +105,5 @@
     --white-lilac: rgba(246, 247, 251, 1);
     --porsche: rgba(236, 163, 107, 1);
     --cyan: #C4F7F4;
-    --chetwode-white:#9CA2F6;
+    --chetwode-white: #9CA2F6;
 }
