--- a/css/pages/_formShelter.scss
+++ b/css/pages/_formShelter.scss
@@ -9,8 +9,10 @@
         font-weight: 400;
     }
 
-    :placeholder{
-        color: var(--chetwode-blue)
+    form{
+        ::placeholder{
+            color: var(--chetwode-blue)
+        }
     }
 }
 
