--- a/css/pages/_profileShelter.scss
+++ b/css/pages/_profileShelter.scss
@@ -29,6 +29,11 @@
                 position: relative;
                 left: 80%;
             }
+
+            .button-main{
+                margin-left: 5em;
+                width: 250px;
+            }
         }
 
         .josefinsans-chetwode-blue-18px {
