--- a/css/style.scss
+++ b/css/style.scss
@@ -90,3 +90,38 @@ body {
         }
     }
 }
+
+// .container-filter{
+//     position: fixed;
+//     top: 0;
+//     right: 0;
+//     bottom: 0;
+//     left: 0;
+//     background-color: var(--porsche);
+//     z-index: 10;
+//     display: none;
+//     align-items: center;
+
+//     &.open{
+//         display: flex;
+//     }
+
+//     .close-menu{
+//         background-color: transparent;
+//         border: none;
+//         outline: none;
+//         position: absolute;
+//         top: 1rem;
+//         right: 1rem;
+//     }
+
+//     .container-inner-filter{
+//         background-color:white;
+//         border-radius: 15px;
+//         display: flex;
+//         flex-direction: column;
+//         width: 100%;
+//         padding:2rem;
+//         margin: 0;
+//     }
+// }
