--- a/css/pages/_adoptionForm.scss
+++ b/css/pages/_adoptionForm.scss
@@ -41,6 +41,7 @@ header{
     .title {
         position: relative;
         padding-top: 2em;
+        width: 80%;
 
         .josefinsans-normal-black-30px {
             color: black;
