--- a/css/pages/_profileShelter.scss
+++ b/css/pages/_profileShelter.scss
@@ -34,6 +34,19 @@
                 margin-left: 5em;
                 width: 250px;
             }
+
+            .button-secondary {
+                background-color: white;
+                border: 2px solid;
+                border-color: var(--porsche);
+                border-radius: 15px;
+                width: 160px;
+                height: 64px;
+                color: var(--porsche);
+                font-size: 22px;
+                font-weight: 600;
+                font-family: var(--font-family-josefin_sans);
+            }
         }
 
         .josefinsans-chetwode-blue-18px {
