--- a/css/style.scss
+++ b/css/style.scss
@@ -28,6 +28,7 @@
 @import 'pages/index';
 @import 'pages/logInShelter';
 @import 'pages/logInUser';
+@import 'pages/petsListPerShelter';
 @import 'pages/profileShelterEdit';
 @import 'pages/profileShelter';
 @import 'pages/profileUserEdit';
