--- a/css/pages/_index.scss
+++ b/css/pages/_index.scss
@@ -90,18 +90,16 @@
 }
 
 .owl-carousel {
-    background-color: white;
 
-    .card {
-        display: inline-block;
-        border-radius: 15px;
-        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-        background-color: white;
+    // .card {
+    //     display: inline-block;
+    //     border-radius: 15px;
+    //     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 
-        .card-img-top {
-            border-radius: 15px 15px 0px 0px;
-        }
-    }
+    //     .card-img-top {
+    //         border-radius: 15px 15px 0px 0px;
+    //     }
+    // }
 
     a{
         text-decoration: none;
