--- a/css/pages/_profileShelter.scss
+++ b/css/pages/_profileShelter.scss
@@ -60,3 +60,20 @@
         }
     }
 }
+
+.show-pets-shelter{
+    
+    background-color: white;
+    border-radius: 15px;
+    position: relative;
+    top:-1em;
+
+    .josefinsans-normal-40px {
+        color: var(--chetwode-blue);
+        font-family: "Josefin Sans";
+        font-size: 40px;
+        font-weight: 500;
+        letter-spacing: 0px;
+        min-height: 12px;
+    }
+}
