--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,29 @@
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans:400|Quicksand:400");
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans:400,600|Quicksand:400,500");
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans:400");
+.owl-carousel .card {
+  display: inline-block;
+  border-radius: 8px 8px 0px 0px;
+  -webkit-box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.owl-carousel .card .card-img-top {
+  border-radius: 8px 8px 0px 0px;
+}
+
+.owl-carousel a {
+  text-decoration: none;
+}
+
+.owl-carousel .josefinsans-semi-bold-chetwode-blue-16px {
+  color: var(--chetwode-blue);
+  font-family: var(--font-family-josefin_sans);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+}
+
 footer {
   background-color: var(--porsche);
   position: relative;
@@ -192,15 +215,6 @@ header button {
           justify-content: center;
 }
 
-header a {
-  text-decoration: none;
-}
-
-header button {
-  border: none;
-  background-color: white;
-}
-
 .top-background {
   background-color: var(--porsche);
   padding-bottom: 2em;
@@ -331,19 +345,6 @@ header button {
   --chetwode-blue: rgba(118, 126, 237, 1);
   --white-lilac: rgba(246, 247, 251, 1);
   --porsche: rgba(236, 163, 107, 1);
-}
-
-.content a {
-  color: var(--porsche);
-  text-decoration: none;
-}
-
-:root {
-  --chetwode-blue: rgba(118, 126, 237, 1);
-  --white-lilac: rgba(246, 247, 251, 1);
-  --porsche: rgba(236, 163, 107, 1);
-  --cyan: #C4F7F4;
-  --chetwode-white:#9CA2F6;
 }
 
 .top-adoption {
@@ -1130,18 +1131,6 @@ collapsible:hover .arrow-white {
   font-weight: 600;
 }
 
-.owl-carousel a {
-  text-decoration: none;
-}
-
-.owl-carousel .josefinsans-semi-bold-chetwode-blue-16px {
-  color: var(--chetwode-blue);
-  font-family: var(--font-family-josefin_sans);
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 600;
-}
-
 .ico {
   border-radius: 50%;
   cursor: pointer;
@@ -1554,6 +1543,22 @@ collapsible:hover .arrow-white {
   letter-spacing: 0px;
   min-height: 12px;
   width: 54px;
+}
+
+.show-pets-shelter {
+  background-color: white;
+  border-radius: 15px;
+  position: relative;
+  top: -1em;
+}
+
+.show-pets-shelter .josefinsans-normal-40px {
+  color: var(--chetwode-blue);
+  font-family: "Josefin Sans";
+  font-size: 40px;
+  font-weight: 500;
+  letter-spacing: 0px;
+  min-height: 12px;
 }
 
 .detail-user .user-actions {
