--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,7 @@
 @import 'layout/header';
 @import 'layout/navigation';
 
+@import 'pages/403';
 @import 'pages/404';
 @import 'pages/adoptionForm';
 @import 'pages/adoptionRequestsListShelter';
@@ -33,6 +34,7 @@
 @import 'pages/profileUserEdit';
 @import 'pages/profileUser';
 @import 'pages/searchPet';
+@import 'pages/searchDog';
 @import 'pages/signUpUser';
 @import 'pages/signUpShelter';
 @import 'pages/updatePet';
