--- a/css/pages/_detailPet.scss
+++ b/css/pages/_detailPet.scss
@@ -3,6 +3,8 @@
 .detail-pet{
     background-color:var(--porsche);
     padding-bottom: 5em;
+    margin-left: auto;
+    margin-right: auto;
 
     .arrow-left{
         position: absolute;
@@ -27,7 +29,7 @@
         background-color: white;
         border-radius: 15px;
         position: relative;
-        top: -2em;
+        top: -1em;
         box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
     }
 
